# LaserCraft

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/src/: api.rs  main.rs  mqtt_helper.rs
app/: README.md  build.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/example/lasercraft/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/lasercraft/: ApiService.kt  HomeSceen.kt  LaserCraftApp.kt  MainActivity.kt
app/app/src/main/java/com/example/lasercraft/common/: ErrorDialog.kt
app/app/src/main/java/com/example/lasercraft/mqtt/: MqttClient.kt
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/xml/: network_security_config.xml
app/app/src/test/java/com/example/lasercraft/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/lasercraft/: HomeSceen.kt  MainActivity.kt
app/src/main/java/com/example/lasercraft/di/: DiModule.kt
app/src/main/java/com/example/lasercraft/mqtt/: MqttClient.kt
app/src/main/java/com/example/lasercraft/navigation/: LaserCraftNavGraph.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: README.md
embedded/: .gitignore  README.md  esp32_mqtt.ino  esp32_serial.ino  main.ino  test_gcode.ino
embedded/examples/: button.ino
embedded/lib/: README.md
embedded/lib/EspSoftwareSerial/src/: SoftwareSerial.h
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
