[package]
name = "laser_craft_api"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
image = "0.23.14"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
actix-web = "4.5.1"
actix-multipart = "0.6.1"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
vtracer = "0.6.3"
svg2gcode = "0.2.3"
anyhow = "1.0.86"
